force-app/main/default/objects/Participante_de_la_Licitaci_n__c/Participante_de_la_Licitaci_n__c.object-meta.xml
<CustomObject>
    <label>Participante de la Licitación</label>
    <nameField>
        <label>Nombre de Participante</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Participantes de la Licitación</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>