force-app/main/default/objects/Participante_de_la_Licitaci_n__c/fields/Licitacion__c.field-meta.xml
<CustomField>
    <fullName>Licitacion__c</fullName>
    <formula>Oportunidad__r.Licitaci_n__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Licitación</label>
    <type>Text</type>
</CustomField>