force-app/main/default/objects/Participante_de_la_Licitaci_n__c/fields/Nombre_del_Contacto__c.field-meta.xml
<CustomField>
    <fullName>Nombre_del_Contacto__c</fullName>
    <label>Nombre del Contacto</label>
    <length>100</length>
    <type>Text</type>
</CustomField>