force-app/main/default/objects/Participante_de_la_Licitaci_n__c/fields/Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Oportunidad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Oportunidad</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Participantes de la Licitación</relationshipLabel>
    <relationshipName>Participantes_de_la_Licitaci_n</relationshipName>
    <type>Lookup</type>
</CustomField>